fix left scrollbar finally!

--- a/appserver/static/config.css
+++ b/appserver/static/config.css
@@ -93,7 +93,7 @@
 	}		
 }
 .ce_app_name {
-	float:right;
+	float: right;
 	font-size: 16px;
 	font-weight: 200;
 	color: white;
@@ -101,48 +101,49 @@
 	
 }
 .ce_wrap {
-    position:absolute;
-    top:44px;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+	position: absolute;
     box-sizing: border-box;
     background-color: #353535;
+    top: 44px;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
-
+.ce_file_wrap {
+	opacity: 0;
+	padding: 4px 0;
+}
 .ce_file_list {
-    list-style-type: none;
     background-color: #1e1e1e;
     color: #ccc;
-    position:absolute;
+    position: absolute !important;
     width: 280px;
-    margin: 37px 0 0 0;
-    padding: 0 0 20px 0; 
-    overflow-x: auto;
-    height: 100%;
+	margin: 0;
+    padding: 0; 
+	overflow-x: hidden;
+    top: 37px;
+	bottom: 0;
 	box-shadow: inset -4px 0px 4px rgba(0, 0, 0, 0.28);
 }
-.ce_file_list li {
-    white-space:nowrap;
-    padding: 2px 10px 2px 22px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-.ce_file_list li i {
-    padding-right: 6px;
+.ce_leftnav i{
+	margin-right: 4px;
 }
 .ce_leftnav {
     cursor: pointer;
-	opacity: 0;
+    white-space: nowrap;
+    padding: 2px 10px 2px 22px;
+    text-overflow: ellipsis;
+    overflow: hidden;	
 }
 .ce_leftnav:hover {
     background-color:#2a2d2e;
 }
 .ce_file_path {
-	position:absolute;
+	position: relative;
 	width: 280px;
+	height: 40px;
     border-bottom: 1px solid #171d21;
-    line-height: 35px;
+    line-height: 36px;
     background-color: #262626;
     box-shadow: inset 0px -4px 4px rgba(0, 0, 0, 0.28), inset 0px 4px 4px rgba(0, 0, 0, 0.28);
 	white-space: nowrap;
@@ -286,10 +287,10 @@
     position: relative;
 }
 .ce_restore_session i  {
-    font-size: 20px;
+    font-size:18px;
     color: white;
     position: absolute;
-    left: -16px;
+    left: -18px;
     top: 0px;
 }
 .ce_restore_session:hover i {
@@ -387,7 +388,8 @@
     padding: 4px;
     width: 220px;
     box-shadow: 0 2px 8px #000;
-    color: #bbb;	
+    color: #bbb;
+	z-index: 9;	
 }
 .ce_context_menu_wrap > div {
 	margin: 2px 2px; 
@@ -505,24 +507,7 @@
     cursor: not-allowed;
     opacity: 0.2;
 }
-/* width */
-::-webkit-scrollbar {
-    width: 14px;
-}
-/* Track */
-::-webkit-scrollbar-track {
-    background: #262626; 
-    border-left:1px solid #1d1d1d  
-}
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #383838; 
-}
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #1e1e1e; 
-    cursor: pointer;
-}
+
 .ceRedLine {
 	border-left: 8px solid red;
 }
